--- a/colors-app/src/ColorBox/Colorbox.css
+++ b/colors-app/src/ColorBox/Colorbox.css
@@ -1,4 +1,4 @@
-.ColorBox {
+/* .ColorBox {
   width: 20%;
   height: 25%;
   margin: 0 auto;
@@ -7,8 +7,8 @@
   display: inline-block;
   margin-bottom: -4px;
 }
-
-.copy-button {
+ */
+/* .copy-button {
   width: 100px;
   height: 30px;
   position: absolute;
@@ -27,7 +27,7 @@
   background: rgba(255, 255, 255, 0.3);
   opacity: 0;
 }
-
+ */
 .ColorBox:hover .copy-button {
   opacity: 1;
   transition: 0.5s;
